--- a/ecowari-resort-inf.html
+++ b/ecowari-resort-inf.html
@@ -327,7 +327,7 @@ Esta cercanía permite que el proyecto sea rápidamente ubicable, brindando conf
                         </ul>
 
                         <div class="d-grid gap-3">
-                            <a href="https://wa.link/f077ze"
+                            <a href="https://wa.link/aqh2al"
                                 target="_blank" class="btn btn-whatsapp-prop py-3 rounded-pill">
                                 <i class="fab fa-whatsapp fa-lg me-2"></i> Cotiza aquí 
                             </a>
