link wsp ciudad

--- a/ciudad-de-oro-inf.html
+++ b/ciudad-de-oro-inf.html
@@ -350,7 +350,7 @@
                         </ul>
 
                         <div class="d-grid gap-3">
-                            <a href="https://wa.link/f077ze"
+                            <a href="https://wa.link/yo6rxy"
                                 target="_blank" class="btn btn-whatsapp-prop py-3 rounded-pill">
                                 <i class="fab fa-whatsapp fa-lg me-2"></i> Cotiza aquí 
                             </a>
